feat(接口测试): 场景批量执行